src/input/snapshots/jiq__input__input_render_tests__snapshot_query_focused_with_syntax_error.snap
---
source: src/input/input_render_tests.rs
expression: output
---
"╭   ⚠ Syntax Error   Object | Showing last successful result ──────────────────╮"
"│{                                                                             │"
"│  "name": "Alice"                                                             │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────────────────────────────────────────────────────────────── L1-3/3 (0%) ╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.invalid[                                                                     │"
"╰─────────────── Shift+Tab Navigate Results • Ctrl+E Show Error ───────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
