src/input/snapshots/jiq__input__input_render_tests__snapshot_query_unfocused_long_query.snap
---
source: src/input/input_render_tests.rs
assertion_line: 94
expression: output
---
"╭ Object  · . ──────────────────────────────────────────────────── L1-1/1 (0%) ╮"
"▌"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰Edit Query • i Edit Query • > value • * iterate • ^ parent • } wrap • ]/[ sibl╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.users | map(select(.name == "Alice")) | .[0].name                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Shift+Tab Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+C Qui"
