src/input/snapshots/jiq__input__input_render_tests__snapshot_query_unfocused_normal_mode.snap
---
source: src/input/input_render_tests.rs
assertion_line: 67
expression: output
---
"╭ Object  · . ─────────────────────────────────────────────────────────────────╮"
"▌"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰────────────────── Tab Edit Query • i Edit Query • > value ────── L1-1/1 (0%) ╯"
"╭ Query [NORMAL] (press 'i' to edit) ───────────────────── Ctrl+A AI Assistant ╮"
"│.name                                                                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Shift+Tab Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+C Qui"
