src/input/snapshots/jiq__input__input_render_tests__snapshot_query_unfocused_with_syntax_error.snap
---
source: src/input/input_render_tests.rs
expression: output
---
"╭   ⚠ Syntax Error   Object | Showing last successful result ───── L1-3/3 (0%) ╮"
"▌{                                                                             │"
"│  "name": "Alice"                                                             │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────────────── Tab Edit Query • i Edit Query • > Drill in ─────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.invalid[                                                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Shift+Tab Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+C Qui"
